@@ -1,4 +1,5 @@
 0.02
+ - Add doc for Wikibase::Cache.
 
 0.01 2023-04-05T23:26:17+02:00
  - First version.
